// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot tests — CSS refactor safety > AIAssistant 1`] = `
<div
  class="card-surface-secondary rounded-md p-md flex flex-col items-start gap-md w-[248px] "
>
  <div
    class="flex flex-col items-start gap-md w-full"
  >
    <p
      class="typo-body-bold"
    >
      Assistente IA
    </p>
    <p
      class="typo-body-sm"
    >
      A identificação clara do projeto facilita sua aprovação. Utilize um título objetivo que reflita o problema a ser resolvido.
    </p>
  </div>
  <div
    class="flex flex-col items-start gap-md w-full"
  >
    <p
      class="typo-body-bold"
    >
      Exemplo
    </p>
    <div
      class="flex flex-col items-start gap-sm w-full"
    >
      <div
        class="w-full flex flex-col gap-sm"
      >
        <p
          class="typo-body-sm"
        >
          "Programa de Digitalização de Microempresas de Campina Grande"
        </p>
        <div
          class="divider"
        />
      </div>
      <div
        class="w-full flex flex-col gap-sm"
      >
        <p
          class="typo-body-sm"
        >
          "Projeto de Capacitação Empreendedora Jovem - PB"
        </p>
      </div>
    </div>
  </div>
  <div
    class="flex flex-col items-start gap-md w-full"
  >
    <p
      class="typo-body-bold"
    >
      Ações da IA
    </p>
    <div
      class="flex flex-col items-center gap-xs w-full"
    >
      <button
        class="inline-flex items-center justify-center rounded-full cursor-pointer transition-all duration-150 active:scale-[0.98] focus-visible:ring-2 focus-visible:ring-[var(--semantic-accent)] focus-visible:ring-offset-2 outline-none disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-[var(--semantic-button-secondary)] text-[color:var(--semantic-button-label-secondary)] hover:bg-[var(--semantic-button-secondary-hover)] h-[40px] px-md gap-xs typo-button w-[200px]"
        type="button"
      >
        Gerar sugestão
      </button>
      <button
        class="inline-flex items-center justify-center rounded-full cursor-pointer transition-all duration-150 active:scale-[0.98] focus-visible:ring-2 focus-visible:ring-[var(--semantic-accent)] focus-visible:ring-offset-2 outline-none disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-[var(--semantic-button-secondary)] text-[color:var(--semantic-button-label-secondary)] hover:bg-[var(--semantic-button-secondary-hover)] h-[40px] px-md gap-xs typo-button w-[200px]"
        type="button"
      >
        Melhorar texto
      </button>
      <button
        class="inline-flex items-center justify-center rounded-full cursor-pointer transition-all duration-150 active:scale-[0.98] focus-visible:ring-2 focus-visible:ring-[var(--semantic-accent)] focus-visible:ring-offset-2 outline-none disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-[var(--semantic-button-secondary)] text-[color:var(--semantic-button-label-secondary)] hover:bg-[var(--semantic-button-secondary-hover)] h-[40px] px-md gap-xs typo-button w-[200px]"
        type="button"
      >
        Adaptar para edital
      </button>
      <button
        class="inline-flex items-center justify-center rounded-full cursor-pointer transition-all duration-150 active:scale-[0.98] focus-visible:ring-2 focus-visible:ring-[var(--semantic-accent)] focus-visible:ring-offset-2 outline-none disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none bg-[var(--semantic-button-secondary)] text-[color:var(--semantic-button-label-secondary)] hover:bg-[var(--semantic-button-secondary-hover)] h-[40px] px-md gap-xs typo-button w-[200px]"
        type="button"
      >
        Validar conteúdo
      </button>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > AgendaBadge 1`] = `
<div
  class="flex-center gap-xs px-sm py-2xs rounded-md status-warning-bg "
>
  <div
    class="size-[8px] rounded-full status-warning-dot"
  />
  <span
    class="typo-body-sm-bold text-right whitespace-nowrap"
  >
    0,521
  </span>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > AgendaIndicator 1`] = `
<div
  class="flex flex-col gap-sm w-full"
>
  <div
    class="flex items-start gap-md w-full "
  >
    <span
      class="flex-1 typo-body-sm"
    >
      IDHM
    </span>
    <div
      class="w-[145px] flex flex-col gap-2xs"
    >
      <span
        class="typo-body-sm-bold text-right"
      >
        0,720
      </span>
      <div
        class="flex flex-col gap-2xs w-full "
      >
        <div
          class="grid grid-cols-3 gap-2xs items-center"
        >
          <div
            class="relative h-[4px]"
          >
            <div
              class="absolute inset-0 rounded-full bg-[var(--semantic-surface-secondary)]"
            />
          </div>
          <div
            class="relative h-[4px]"
          >
            <div
              class="absolute inset-0 rounded-full bg-[var(--semantic-surface-secondary)]"
            />
          </div>
          <div
            class="relative h-[4px]"
          >
            <div
              class="absolute inset-0 rounded-full bg-[var(--semantic-surface-secondary)]"
            />
            <div
              class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 size-[9px] rounded-full status-success-dot"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="divider"
  />
</div>
`;

exports[`Snapshot tests — CSS refactor safety > AgendaStats 1`] = `
<div
  class="card-surface p-md flex-between gap-3xl w-full "
>
  <div
    class="flex-center gap-md"
  >
    <span
      class="typo-display-lg"
    >
      10
    </span>
    <span
      class="typo-body"
    >
      indicadores alinhados às agendas estratégicas para melhorar o ambiente de negócios do seu município
    </span>
  </div>
  <div
    class="flex-center gap-md"
  >
    <div
      class="flex-center gap-xs px-sm py-xs rounded-md status-success-bg"
    >
      <div
        class="size-[10px] rounded-full status-success-dot"
      />
      <span
        class="typo-display-sm"
      >
        5
      </span>
      <span
        class="typo-body"
      >
        Bom
      </span>
    </div>
    <div
      class="flex-center gap-xs px-sm py-xs rounded-md status-warning-bg"
    >
      <div
        class="size-[10px] rounded-full status-warning-dot"
      />
      <span
        class="typo-display-sm"
      >
        3
      </span>
      <span
        class="typo-body"
      >
        Atenção
      </span>
    </div>
    <div
      class="flex-center gap-xs px-sm py-xs rounded-md status-alert-bg"
    >
      <div
        class="size-[10px] rounded-full status-alert-dot"
      />
      <span
        class="typo-display-sm"
      >
        2
      </span>
      <span
        class="typo-body"
      >
        Alerta
      </span>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > Card 1`] = `
<div
  class="card-surface p-md"
>
  <div>
    Content
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > EconomicBaseCard 1`] = `
<div
  class="card-surface p-md flex-col-start justify-between gap-lg card-hoverable "
>
  <div
    class="flex justify-start gap-sm w-full"
  >
    <div
      class="flex items-center gap-sm w-full"
    >
      <span
        aria-hidden="true"
        class="inline-flex items-center justify-center shrink-0 rounded-full bg-[var(--semantic-button-tertiary)] text-[color:var(--semantic-button-label-tertiary)] w-[32px] h-[32px] "
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trending-up"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 7h6v6"
          />
          <path
            d="m22 7-8.5 8.5-5-5L2 17"
          />
        </svg>
      </span>
      <span
        class="typo-body"
      >
        PIB per capita
      </span>
    </div>
    <div
      class="relative "
    >
      <button
        aria-label="Ver definição de PIB per capita"
        class="inline-flex items-center justify-center rounded-full cursor-pointer transition-all duration-150 active:scale-[0.98] focus-visible:ring-2 focus-visible:ring-[var(--semantic-accent)] focus-visible:ring-offset-2 outline-none disabled:opacity-50 disabled:cursor-not-allowed disabled:pointer-events-none shrink-0 bg-transparent text-[color:var(--semantic-text-primary)] hover:bg-[var(--semantic-surface-hover)] w-[32px] h-[32px] "
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-info"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <path
            d="M12 16v-4"
          />
          <path
            d="M12 8h.01"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="flex items-end justify-between w-full"
  >
    <span
      class="typo-display-sm"
    >
      R$ 22.500
    </span>
    <span
      class="typo-body-sm-bold text-right"
    >
      +3,2%
    </span>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > Footer 1`] = `
<footer
  class="bg-surface px-margin py-2xl "
>
  <div
    class="flex items-start mx-auto w-full max-w-[1440px] justify-between"
  >
    <div
      class="flex flex-col gap-sm items-start"
    >
      <img
        alt="Sebrae"
        class="h-[60px] w-[111px] object-cover"
        src="/assets/sebrae-logo.png"
      />
      <h3
        class="typo-h3"
      >
        Plataforma OPP
      </h3>
      <p
        class="typo-body whitespace-pre-line"
      >
        Transformando dados em
decisões estratégicas.
      </p>
    </div>
    <div
      class="flex flex-col gap-sm items-start"
    >
      <span
        class="typo-body-bold"
      >
        Navegação
      </span>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Início
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Panorama
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Recursos
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Capacitação
      </a>
    </div>
    <div
      class="flex flex-col gap-sm items-start"
    >
      <span
        class="typo-body-bold"
      >
        Recursos
      </span>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Documentação
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Tutoriais
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        API
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Suporte
      </a>
    </div>
    <div
      class="flex flex-col gap-sm items-start"
    >
      <span
        class="typo-body-bold"
      >
        Contato
      </span>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        contato@plataforma.gov.br
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Fale Conosco
      </a>
    </div>
  </div>
  <div
    class="flex flex-col mx-auto w-full max-w-[1440px] gap-lg items-start mt-[var(--spacing-lg)] pb-2xl"
  >
    <div
      class="divider"
    />
    <p
      class="typo-body"
    >
      © 2025 Plataforma. Todos os direitos reservados.
    </p>
  </div>
</footer>
`;

exports[`Snapshot tests — CSS refactor safety > FormulatorProgress 1`] = `
<div
  class="card-surface p-lg flex flex-col items-start gap-sm w-full "
>
  <div
    class="flex items-center justify-between w-full"
  >
    <p
      class="typo-body-bold"
    >
      0
      % concluído
    </p>
    <p
      class="typo-body"
    >
      1
      /
      10
       etapas • Etapa Atual: 
      Identificação
    </p>
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="w-full h-[11px] rounded-full bg-[var(--semantic-background-primary)] overflow-hidden "
    role="progressbar"
  >
    <div
      class="h-full rounded-full bg-accent transition-[width] duration-200"
      style="width: 0%;"
    />
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > Header 1`] = `
<header
  class="flex-between mx-auto w-full max-w-[1440px] sticky top-0 z-50 py-md px-lg bg-primary "
>
  <img
    alt="Sebrae"
    class="h-[60px] w-[111px] object-cover cursor-pointer"
    src="/assets/sebrae-logo.png"
  />
  <div
    class="flex-between h-[60px] gap-md bg-surface rounded-full px-sm py-2xs"
  >
    <div
      class="relative "
    >
      <div
        class="flex items-center gap-sm bg-surface-secondary rounded-full px-sm py-xs overflow-hidden"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search shrink-0 text-inactive"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          class="typo-body-bold bg-transparent outline-none w-full truncate"
          placeholder="Buscar município..."
          type="text"
          value="Campina Grande"
        />
      </div>
    </div>
    <nav
      class="flex-between gap-md"
    >
      <button
        class="typo-body-sm whitespace-nowrap transition-colors px-sm py-xs rounded-full bg-accent text-[var(--semantic-button-label-primary)]"
      >
        Agenda prioritária
      </button>
      <button
        class="typo-body-sm whitespace-nowrap transition-colors px-sm py-xs rounded-full hover:bg-[var(--semantic-surface-hover)]"
      >
        Mapeamento de recursos
      </button>
      <button
        class="typo-body-sm whitespace-nowrap transition-colors px-sm py-xs rounded-full hover:bg-[var(--semantic-surface-hover)]"
      >
        Capacitação
      </button>
      <button
        class="typo-body-sm whitespace-nowrap transition-colors px-sm py-xs rounded-full hover:bg-[var(--semantic-surface-hover)]"
      >
        Formulador de iniciativas
      </button>
    </nav>
  </div>
  <div
    class="flex items-center gap-xs h-[60px] rounded-full "
  >
    <svg
      class="shrink-0"
      fill="none"
      style="width: var(--radius-xl); height: var(--radius-xl);"
      viewBox="-6 -6 44 44"
    >
      <clippath
        id="user-avatar-clip"
      >
        <path
          d="M0 16C0 7.163 7.163 0 16 0s16 7.163 16 16-7.163 16-16 16S0 24.837 0 16Z"
        />
      </clippath>
      <g
        clip-path="url(#user-avatar-clip)"
      >
        <path
          class="text-[var(--semantic-surface-primary)]"
          d="M0 16C0 7.163 7.163 0 16 0s16 7.163 16 16-7.163 16-16 16S0 24.837 0 16Z"
          fill="currentColor"
        />
        <path
          class="text-[var(--semantic-text-primary)]"
          d="M15.717 7.006c3.856-.156 7.111 2.838 7.276 6.694.166 3.855-2.82 7.118-6.675 7.293-3.87.176-7.145-2.823-7.311-6.692-.166-3.87 2.841-7.138 6.71-7.295Z"
          fill="currentColor"
        />
        <path
          class="text-[var(--semantic-text-primary)]"
          d="M15.034 23.012l.094-.002c.862-.016 2.278-.027 3.125.08 1.712.217 3.647.946 5.064 1.889.526.356 1.022.751 1.483 1.181.74.683 1.743 1.827 2.14 2.75.095.221.049 1.609.053 1.943.018 1.372-.023 2.776 0 4.148-3.308-.038-6.681-.005-9.995-.005l-7.827.001-2.55.001c-.516 0-1.093.01-1.604-.016l-.003-3.596c0-.43-.06-2.153.052-2.474.083-.24.236-.451.376-.663.436-.659.914-1.253 1.47-1.823 1.735-1.781 4.226-2.977 6.738-3.324.456-.063.922-.075 1.382-.09Z"
          fill="currentColor"
        />
      </g>
    </svg>
    <span
      class="typo-body whitespace-nowrap"
    >
      João Maria
    </span>
  </div>
</header>
`;

exports[`Snapshot tests — CSS refactor safety > NumberBullet — default (secondary) 1`] = `
<span
  class="inline-flex items-center justify-center shrink-0 rounded-full typo-body-sm-bold w-[24px] h-[24px] bg-surface-secondary "
>
  3
</span>
`;

exports[`Snapshot tests — CSS refactor safety > NumberBullet — primary md 1`] = `
<span
  class="inline-flex items-center justify-center shrink-0 rounded-full typo-body-sm-bold w-[32px] h-[32px] bg-accent text-[color:var(--semantic-text-secondary)] "
>
  10
</span>
`;

exports[`Snapshot tests — CSS refactor safety > ProgressBar 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="40"
  class="w-full h-[11px] rounded-full bg-[var(--semantic-background-primary)] overflow-hidden "
  role="progressbar"
>
  <div
    class="h-full rounded-full bg-accent transition-[width] duration-200"
    style="width: 40%;"
  />
</div>
`;

exports[`Snapshot tests — CSS refactor safety > ResourcesCard 1`] = `
<div
  class="card-surface-secondary p-md flex flex-col gap-sm justify-between card-hoverable "
>
  <span
    class="typo-body"
  >
    Total empenhado
  </span>
  <span
    class="typo-display-sm"
  >
    R$ 4,1 bilhões
  </span>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > RisksCard 1`] = `
<div
  class="status-alert-bg rounded-sm p-lg border border-solid border-[var(--semantic-alert)] flex flex-col gap-md card-hoverable "
>
  <span
    class="shrink-0 typo-display text-[color:var(--semantic-alert)]"
  >
    R$ 180
  </span>
  <span
    class="typo-body-bold"
  >
    Investimento per capita
  </span>
  <p
    class="typo-body"
  >
    Valor abaixo da média
  </p>
  <div
    class="flex flex-col gap-2xs"
  >
    <p
      class="typo-body-sm-bold"
    >
      Investimento público
    </p>
    <p
      class="typo-body-sm"
    >
      Contexto de risco
    </p>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > SectionContainer 1`] = `
<section
  class="section-container "
>
  <div>
    Content
  </div>
</section>
`;

exports[`Snapshot tests — CSS refactor safety > SectionHeader — title only 1`] = `
<div
  class="flex items-start gap-md "
>
  <h1
    class="w-3/4 typo-h1"
  >
    Panorama
  </h1>
  <div
    class="flex-col flex items-start gap-md w-1/3 pt-2xs"
  />
</div>
`;

exports[`Snapshot tests — CSS refactor safety > SectionHeader — with description 1`] = `
<div
  class="flex items-start gap-md "
>
  <h1
    class="w-2/3 typo-h1"
  >
    Panorama
  </h1>
  <div
    class="flex-col flex items-start gap-md w-1/3 pt-2xs"
  >
    <p
      class="typo-body"
    >
      Descrição da seção
    </p>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > StepIndicator — checked 1`] = `
<div
  class="flex items-center gap-sm w-full text-left "
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check shrink-0 text-[color:var(--semantic-success)]"
    fill="none"
    height="20"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="20"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  <div
    class="flex flex-col items-start"
  >
    <span
      class="typo-body-bold text-[color:var(--semantic-text-primary)]"
    >
      1. Identificação
    </span>
    <span
      class="typo-body-sm text-[color:var(--semantic-text-primary)]"
    >
      Concluído
    </span>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > TextInput — all props 1`] = `
<div
  class="flex flex-col items-start gap-xs w-full "
>
  <label
    class="typo-body-bold"
    for="_r_0_"
  >
    Problema central
  </label>
  <p
    class="typo-body-sm"
  >
    💡 Use dados do diagnóstico para fundamentar.
  </p>
  <input
    class="w-full typo-body px-sm py-xs border border-solid rounded-[var(--spacing-xs)] bg-[var(--semantic-surface-primary)] border-[var(--semantic-surface-secondary)] focus:outline-none focus:border-[var(--semantic-text-primary)] placeholder:text-[color:var(--semantic-text-inactive)]"
    id="_r_0_"
    placeholder="Descreva o problema que quer resolver"
    type="text"
    value=""
  />
</div>
`;

exports[`Snapshot tests — CSS refactor safety > TextInput — multiline 1`] = `
<div
  class="flex flex-col items-start gap-xs w-full "
>
  <textarea
    class="w-full typo-body px-sm py-xs border border-solid rounded-[var(--spacing-xs)] bg-[var(--semantic-surface-primary)] border-[var(--semantic-surface-secondary)] focus:outline-none focus:border-[var(--semantic-text-primary)] placeholder:text-[color:var(--semantic-text-inactive)] resize-none"
    id="_r_1_"
    placeholder="..."
    rows="3"
  />
</div>
`;

exports[`Snapshot tests — CSS refactor safety > TitleSubtitle 1`] = `
<div
  class="flex-col-start gap-sm "
>
  <h3
    class="w-full typo-h3"
  >
    Emendas parlamentares
  </h3>
  <p
    class="w-full typo-body"
  >
    Recursos destinados
  </p>
</div>
`;
